# edgedb-fetch

./: .gitignore  MyGrammar.g4  README.md  bun.lockb  docker-compose.yml  next.config.js  package.json  todo.md  tsconfig.json  upload-edgedb.sh
.antlr/: MyGrammar.interp  MyGrammarBaseListener.java  MyGrammarLexer.interp  MyGrammarLexer.java  MyGrammarLexer.tokens  MyGrammarListener.java  MyGrammarParser.java
bak-extension/: bun.lockb  package.json
bak-extension/src/: index.ts
bak-extension/syntaxes/: styled-components.json
compiler/: addFragmentSelectMap.ts  collectDefinitions.ts  compiler.ts  context.ts  deferredFragmentsVisitor.ts  expression.ts  filter.ts  fragment.ts  getIncrementalArg.ts  isDeferred.ts  manifest.ts  prettifyPath.ts  query.ts  selectionSet.ts  type.ts  variablesDefinition.ts
compiler/runtime/: convertToPromises.ts
dbschema/: default.esdl
dbschema/edgeql-js/: __spec__.ts  funcops.ts  operators.ts  select.ts  toEdgeQL.ts
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql
extension/: bun.lockb  eslint.config.js  package.json
extension/syntaxes/: css.styled.json
extension/test/: index.test.ts
my-first-plugin/: Cargo.toml  package.json
my-first-plugin/src/: lib.rs
my-first-plugin/tests/__swc_snapshots__/src/lib.rs/: Some test name.js
prisma/: schema.prisma
r-compiler/: Cargo.toml
r-compiler/src/: main.rs
src/: cache.ts  client.ts  seed.ts  test.terenceql  types.ts  useFragment.ts
src/ components/: PostCard.tsx
(+33 files in other folders)
