[package]
name = "my-first-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.86.*", features = ["ecma_plugin_transform"] }
swc_ecma_parser = "0.141.33"
swc_ecma_transforms_testing = "0.138.1"
log = "0.4.20"
tracing = "0.1.40"
swc_common = "0.33.12"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
